Fix extra white space at mobile modal view

--- a/app/design/frontend/Magento/blank/web/css/source/components/_modals_extend.less
+++ b/app/design/frontend/Magento/blank/web/css/source/components/_modals_extend.less
@@ -164,7 +164,6 @@
 
                 .modal-inner-wrap {
                     height: auto;
-                    min-height: 100%;
                 }
             }
         }
